# bigmemory

./: PlatformVersion.txt
Overview/: Overview.Rnw
airline/: AirlineSchema.xsd  AirportCodes.csv  ContinentalUSAirportInfo.txt  FlightClient.R  FlightServer.R  PlotUSA.R  ProcessAirline.R  airportinfo.txt  scrapeairport.R
pkg/: COPYING  DESCRIPTION
pkg/bigalgebra/: DESCRIPTION  NAMESPACE  README  cleanup  configure  configure.R  configure.Rout  configure.ac  configure.win
pkg/bigalgebra/R/: Arith.R  bigalgebra.R  methods.R  utility.R  wrappers.R  zzz.R
pkg/bigalgebra/inst/doc/: bigalgebra.Rnw
pkg/bigalgebra/inst/include/bigalgebra/: bigalgebra.h
pkg/bigalgebra/man/: Ops.Rd  bigalgebra-package.Rd  daxpy.Rd  dcopy.Rd  dgeev.Rd  dgemm.Rd  dgeqrf.Rd  dgesdd.Rd  dpotrf.Rd  dscal.Rd
pkg/bigalgebra/src/: BigMatrix.h  Makevars  Makevars.in  Makevars.win  bigalgebra.cpp  blas.hpp  blas.hpp.in  ptr_util.hpp  refblas.h  refblas64longlong.h  symbols.rds
pkg/bigalgebra/src/refblas64/: Makefile  dlamc2.f  slamc2.f  xerbla.f
pkg/biganalytics/: DESCRIPTION  NAMESPACE
pkg/biganalytics/R/: biglm.big.matrix.R  binit.R  kmeans.R  summary.stat.R  zzz.R
pkg/biganalytics/man/: apply-methods.Rd  biganalytics-package.Rd  bigkmeans.Rd  biglm.big.matrix.Rd  binit.Rd  kmeans.big.matrix.Rd.unused  summary.stat.Rd
pkg/biganalytics/src/: binit.cpp  hash.cpp  kmeans.cpp  summary_stat.cpp  tapply.cpp
pkg/bigmemory/: DESCRIPTION  NAMESPACE  NEWS  README  configure  configure.R  configure.win
pkg/bigmemory.sri/: DESCRIPTION  NAMESPACE
pkg/bigmemory.sri/R/: sri.R
pkg/bigmemory.sri/man/: bigmemory.sri-package.Rd
pkg/bigmemory/R/: bigmatrix.R  bigmemory.R  mmap.R  zzz.R
pkg/bigmemory/include/: BigMatrix.h  MatrixAccessor.hpp
pkg/bigmemory/inst/include/bigmemory/: BigMatrix.h  MatrixAccessor.hpp  isna.hpp
pkg/bigmemory/inst/include/boost/: uuid.hpp
pkg/bigmemory/inst/include/boost/uuid/: seed_rng.hpp
pkg/bigmemory/man/: as.big.matrix-methods.Rd  attach.big.matrix.Rd  big.matrix-class.Rd  big.matrix.Rd  big.matrix.descriptor-class.Rd  bigmemory-package.Rd  deepcopy.Rd  flush.Rd  morder.Rd  mwhich-methods.Rd  mwhich.Rd  sub.big.matrix.Rd  write.big.matrix.Rd
pkg/bigmemory/src/: BigMatrix.cpp  Makevars.win  SharedCounter.cpp  bigmemory.cpp  util.cpp
pkg/bigtabulate/: DESCRIPTION  NAMESPACE  configure  configure.R
pkg/bigtabulate/R/: bigtabulate.R  zzz.R
pkg/bigtabulate/man/: bigtabulate-package.Rd  bigtabulate.Rd
pkg/bigtabulate/src/: bigtabulate.cpp
pkg/bigvideo/: COPYING  DESCRIPTION  NAMESPACE  configure  video.R  video.cpp
pkg/bigvideo/R/: video.R  zzz.R
pkg/bigvideo/man/: bigvideo-package.Rd  probecamera.Rd
pkg/bigvideo/src/: bigvideo.cpp
pkg/include/: BigMatrix.h  SharedCounter.h  util.hpp
pkg/man/: attach.big.matrix.Rd  big.matrix.Rd  bigmemory-package.Rd  deepcopy.Rd  sub.big.matrix.Rd
pkg/src/: SharedCounter.cpp  bigmemory.cpp  util.cpp
pkg/synchronicity/: .RData  DESCRIPTION  NAMESPACE  README  cleanup  configure  configure.R  configure.Rout
pkg/synchronicity/R/: SkelFiles.tar  mutexes.R  zzz.R
pkg/synchronicity/man/: boost.mutex-class.Rd  boost.mutex.Rd  boost.mutex.descriptor-class.Rd  describe.Rd  is.timed.Rd  lock.Rd  lock.sharable.Rd  shared.name.Rd  synchronicity-package.Rd  unlock.Rd  unlock.sharable.Rd  uuid.Rd
pkg/synchronicity/src/: Makevars  SharedCounter.cpp  synchronicity.cpp  uuid_create.cpp
regression_testing/: LmAndAttachTesting.R  SubsetAndApplyTesting.R
regression_testing/bigalgebra/: test_make_double_ptr.R  utils.R
regression_testing/biganalytics/: ApplyTest.R
regression_testing/bigmemory/: AttachTest.R  SubsetTest.R  test_deepcopy.R
tablestuff/: tablestuff.R
